# spotify-challenge

./: .gitignore  README.md  challenge_spotify.ipynb  download_data.py  environment.yml  prepare_data.py  problem.py  pyproject.toml  utils_api.py
data/: README.md
submissions/classifier_exemple/: model.py
